<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_forum"
        android:icon="@drawable/ic_forum"
        android:title="@string/nav_forum"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_emergency_contact"
        android:icon="@drawable/telefon_icon"
        android:title="@string/nav_emergency_contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_activity"
        android:icon="@drawable/ic_activity"
        android:title="@string/nav_activity"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        app:showAsAction="always" />
</menu>
